# google-cloud-python

./: .coveragerc  .gitignore  .gitmodules  .pinned-metadata.yaml  .pre-commit-config.yaml  .python.yml  .readthedocs.yml  .release-please-bulk-manifest.json  .release-please-individual-manifest.json  .release-please-manifest.json  .repo-metadata.json  .scannerignore  .trampolinerc  .travis.yml  404.md  AGENT_WORKFLOW.md  AUTOGEN.md  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIB.rst  CONTRIBUTING.rst  Dockerfile.generator  Gazebo-trojanhorse-data.git  ISSUE_TEMPLATE  LICENSE  MANIFEST.in  MIGRATION_NOTES.md  Makefile  Makefile.bigtable_v1  Makefile.bigtable_v2  Makefile.datastore  READ.me  README.MD  README.md  README.rst  SUPPORT.md  _config.yml  appveyor.yml  check.py  (+69 more)
.circleci/: config.yml
.gemini/: config.yaml
.generator/: Dockerfile  Dockerfile2  Dockerfile_old  cli.py  cli_new.py  generate-request.json  parse_googleapis_content.py  requirements-test.in  requirements.in  requirements.txt  ruff.toml  run.sh  test_cli.py  test_parse_googleapis_content.py  testfile.txt
.generator/test-resources/librarian/: BUILD.bazel  build-request.json  generate-request.json
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  main.yml  release-please.yml  release-trigger.yml  sync-repo-settings.yaml
.kokoro/: build-bigframes.sh  build-docs-experimental.sh  build-docs.sh  build.sh  common.cfg  docs-publisher.py  docs.cfg  populate-secrets.sh  publish-docs-single.sh  publish-docs.sh  release-single.sh  release.sh  system.sh  (+7 more)
(+46826 files in other folders)
