# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])
exports_files(glob(["*.yaml"]))
load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "py_gapic_library",
)

proto_library(
    name = "language_proto",
)

py_gapic_library(
    name = "language_py_gapic",
    srcs = [":language_proto"],
    grpc_service_config = "language_grpc_service_config.json",
    rest_numeric_enums = True,
    service_yaml = "language_v1.yaml",
    transport = "grpc+rest",
    deps = [
    ],
)
